# avif-convert

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_LICENSES  vcpkg.json
src/avif_convert/: avif_convert.c  avif_convert.h  common.c  main.c
src/avif_convert/input/: jpg_loader.c  png_loader.c
src/avif_convert_cli/: file_io.c  file_io.h  main.c
src/avif_convert_core/: avif_convert.c  avif_convert.h  common.h
src/avif_convert_core/input/: heif_loader.c  loaders.h  webp_loader.c
src/avif_convert_core/output/: avif_writer.c  avif_writer.h
src/avif_convert_io/: file_io.c  file_io.h
src/avif_convert_jni/: avif_convert_jni.c  avif_convert_jni.h
src/avif_convert_watch/: file_watcher.c  file_watcher.h  main.c
vcpkg-triplets/: arm64-linux-dynamic.cmake  arm64-linux.cmake
